tests/error/vararg_outside_varloop.gw
#! [contains] outside varloop
fun void test(...) {
  <<<vararg $ int >>>;
}
new Object => test;
